shadowsocks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shadowsocks
spec:
  template:
    spec:
      containers:
      - name: shadowsocks
        image: mazy/ss-v2ray
