shadowsocks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shadowsocks
spec:
  ports:
  - port: 1080
