shadowsocks/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shadowsocks
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/issuer: $(CERT_MANAGER_ISSUER)
spec:
  rules:
    - host: $(SHADOWSOCKS_DOMAIN)
      http:
        paths:
          - backend:
              serviceName: shadowsocks
              servicePort: 1080
            path: /
